Fix overflow bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,5 +12,5 @@ html {
 body {
   padding: 2rem;
   background: hsl(210, 80%, 30%);
-  overflow: hidden;
+  overflow-x: hidden;
 }
